[project]
name = "ungauged-space-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.9.0",
    "fastparquet>=2026.5.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "jupyter-book>=2.1.5",
    "netcdf4>=1.7.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyproj>=3.7.2",
    "scikit-learn>=1.8.0",
    "xarray>=2026.4.0",
    "xgboost>=3.2.0",
]
